--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "basalt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "bun@1.3.6",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
